--- a/a-rose-by-any-other-name/draft-west-let-localhost-be-localhost-06.html
+++ b/a-rose-by-any-other-name/draft-west-let-localhost-be-localhost-06.html
@@ -380,6 +380,8 @@
 <link href="#rfc.section.4" rel="Chapter" title="4 IANA Considerations"/>
 <link href="#rfc.section.4.1" rel="Chapter" title="4.1 Domain Name Reservation Considerations"/>
 <link href="#rfc.section.4.2" rel="Chapter" title="4.2 DNSSEC"/>
+<link href="#rfc.section.4.2.1" rel="Chapter" title="4.2.1 Option 1: Explicit delegation"/>
+<link href="#rfc.section.4.2.2" rel="Chapter" title="4.2.2 Option 2: Implicit failure"/>
 <link href="#rfc.section.5" rel="Chapter" title="5 Security Considerations"/>
 <link href="#rfc.section.5.1" rel="Chapter" title="5.1 Applications are encouraged to resolve localhost names themselves."/>
 <link href="#rfc.section.6" rel="Chapter" title="6 Implementation Considerations"/>
@@ -405,7 +407,7 @@
 
   <meta name="dct.creator" content="West, M." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-west-let-localhost-be-localhost-06" />
-  <meta name="dct.issued" scheme="ISO8601" content="2017-8-16" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-8-31" />
   <meta name="dct.abstract" content="This document updates RFC6761 with the goal of ensuring that " />
   <meta name="description" content="This document updates RFC6761 with the goal of ensuring that " />
 
@@ -426,14 +428,14 @@
 </tr>
 <tr>
   <td class="left">Updates: 6761 (if approved)</td>
-  <td class="right">August 16, 2017</td>
+  <td class="right">August 31, 2017</td>
 </tr>
 <tr>
   <td class="left">Intended status: Standards Track</td>
   <td class="right"></td>
 </tr>
 <tr>
-  <td class="left">Expires: February 17, 2018</td>
+  <td class="left">Expires: March 4, 2018</td>
   <td class="right"></td>
 </tr>
 
@@ -455,7 +457,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on February 17, 2018.</p>
+<p>This Internet-Draft will expire on March 4, 2018.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -473,7 +475,9 @@
 <li>4.   <a href="#rfc.section.4">IANA Considerations</a></li>
 <ul><li>4.1.   <a href="#rfc.section.4.1">Domain Name Reservation Considerations</a></li>
 <li>4.2.   <a href="#rfc.section.4.2">DNSSEC</a></li>
-</ul><li>5.   <a href="#rfc.section.5">Security Considerations</a></li>
+<ul><li>4.2.1.   <a href="#rfc.section.4.2.1">Option 1: Explicit delegation</a></li>
+<li>4.2.2.   <a href="#rfc.section.4.2.2">Option 2: Implicit failure</a></li>
+</ul></ul><li>5.   <a href="#rfc.section.5">Security Considerations</a></li>
 <ul><li>5.1.   <a href="#rfc.section.5.1">Applications are encouraged to resolve localhost names themselves.</a></li>
 </ul><li>6.   <a href="#rfc.section.6">Implementation Considerations</a></li>
 <ul><li>6.1.   <a href="#rfc.section.6.1">Non-DNS usage of localhost names</a></li>
@@ -526,8 +530,12 @@
 <h1 id="rfc.section.4.1"><a href="#rfc.section.4.1">4.1.</a> <a href="#domain-name-reservation-considerations" id="domain-name-reservation-considerations">Domain Name Reservation Considerations</a></h1>
 <p id="rfc.section.4.1.p.1">This document requests that IANA update the <samp>localhost.</samp> registration in the registry of Special-Use Domain Names <a href="#RFC6761">[RFC6761]</a> to reference the domain name reservation considerations defined in <a href="#localhost-names">Section 3</a>.</p>
 <h1 id="rfc.section.4.2"><a href="#rfc.section.4.2">4.2.</a> <a href="#dnssec" id="dnssec">DNSSEC</a></h1>
-<p id="rfc.section.4.2.p.1">The <samp>.localhost</samp> TLD is already assigned to IANA, as per <a href="#RFC2606">[RFC2606]</a>. This document requests that a DNSSEC insecure delegation (that is, a delegation with no DS records) be inserted into the root-zone, delegated to <samp>blackhole-[12].iana.org</samp>.</p>
-<p id="rfc.section.4.2.p.2">This request for an insecure delegation relies on the rationale spelled out in section 4 of <a href="#I-D.wkumari-dnsop-internal">[I-D.wkumari-dnsop-internal]</a>, which discusses the DNSSEC considerations for the <samp>.internal</samp> TLD. The same considerations apply to this document&#8217;s discussion of localhost names.</p>
+<p id="rfc.section.4.2.p.1">(Ed note: The following options seem reasonable. I personally prefer the latter, but could be convinced that the former is reasonable if that&#8217;s the way the working group&#8217;s concensus trends.)</p>
+<h1 id="rfc.section.4.2.1"><a href="#rfc.section.4.2.1">4.2.1.</a> <a href="#option-1-explicit-delegation" id="option-1-explicit-delegation">Option 1: Explicit delegation</a></h1>
+<p id="rfc.section.4.2.1.p.1">The <samp>.localhost</samp> TLD is already assigned to IANA, as per <a href="#RFC2606">[RFC2606]</a>. This document requests that a DNSSEC insecure delegation (that is, a delegation with no DS records) be inserted into the root-zone, delegated to <samp>blackhole-[12].iana.org</samp>.</p>
+<p id="rfc.section.4.2.1.p.2">This request for an insecure delegation relies on the rationale spelled out in section 4 of <a href="#I-D.wkumari-dnsop-internal">[I-D.wkumari-dnsop-internal]</a>, which discusses the DNSSEC considerations for the <samp>.internal</samp> TLD. The same considerations apply to this document&#8217;s discussion of localhost names.</p>
+<h1 id="rfc.section.4.2.2"><a href="#rfc.section.4.2.2">4.2.2.</a> <a href="#option-2-implicit-failure" id="option-2-implicit-failure">Option 2: Implicit failure</a></h1>
+<p id="rfc.section.4.2.2.p.1">The <samp>.localhost</samp> TLD is already assigned to IANA, as per <a href="#RFC2606">[RFC2606]</a>, but does not have an entry in the DNSSEC root-zone. This means that the root will return an NXDOMAIN response along with NSEC records constituting a secure denial of existence if queried. That&#8217;s consistent with the requirements to return NXDOMAIN that are laid out in <a href="#localhost-names">Section 3</a>.</p>
 <h1 id="rfc.section.5"><a href="#rfc.section.5">5.</a> <a href="#security-considerations" id="security-considerations">Security Considerations</a></h1>
 <h1 id="rfc.section.5.1"><a href="#rfc.section.5.1">5.1.</a> <a href="#applications-are-encouraged-to-resolve-localhost-names-themselves" id="applications-are-encouraged-to-resolve-localhost-names-themselves">Applications are encouraged to resolve localhost names themselves.</a></h1>
 <p id="rfc.section.5.1.p.1">Applications that attempt to use the local resolver to query <samp>localhost</samp> do not fail safely. If an attacker sets up a malicious DNS server which returns a non-loopback address when queried for localhost names, such applications will connect to that remote server assuming it is local. This risk drives the requirement that applications resolve localhost names themselves if they intend to make security decisions based on the assumption that localhost names resolve locally.</p>
@@ -615,6 +623,7 @@
 
 <ul>
   <li>Incorporated Ted Lemon&#8217;s further feedback from <a href="https://www.ietf.org/mail-archive/web/dnsop/current/msg20769.html">https://www.ietf.org/mail-archive/web/dnsop/current/msg20769.html</a></li>
+  <li>Explicitly waffling on DNSSEC.</li>
 </ul>
 <h1 id="rfc.appendix.B.2"><a href="#rfc.appendix.B.2">B.2.</a> <a href="#draft-west-let-localhost-be-localhost-05" id="draft-west-let-localhost-be-localhost-05">draft-west-let-localhost-be-localhost-05</a></h1>
 <p/>
@@ -654,7 +663,7 @@
 <h1 id="rfc.appendix.B.7"><a href="#rfc.appendix.B.7">B.7.</a> <a href="#draft-west-let-localhost-be-localhost-00" id="draft-west-let-localhost-be-localhost-00">draft-west-let-localhost-be-localhost-00</a></h1>
 <p id="rfc.section.B.7.p.1">First draft.</p>
 <h1 id="rfc.appendix.C"><a href="#rfc.appendix.C">Appendix C.</a> <a href="#acknowledgements" id="acknowledgements">Acknowledgements</a></h1>
-<p id="rfc.section.C.p.1">Ryan Sleevi and Emily Stark informed me about the strange state of localhost name resolution. Erik Nygren poked me to take another look at the set of decisions we made in <a href="#SECURE-CONTEXTS">[SECURE-CONTEXTS]</a> around <samp>localhost.</samp>; this document is the result, and his feedback has been very helpful.</p>
+<p id="rfc.section.C.p.1">Ryan Sleevi and Emily Stark informed me about the strange state of localhost name resolution. Erik Nygren poked me to take another look at the set of decisions we made in <a href="#SECURE-CONTEXTS">[SECURE-CONTEXTS]</a> around <samp>localhost.</samp>; this document is the result. They, along with Warren Kumari, Ted Lemon, John Levine, Mark Andrews, and many other members of DNSOP offered substantive feedback that markedly improved the quality of this document.</p>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Author's Address</a>
 </h1>
